Removed copy call

--- a/demos/unidata_users_workshop_2015.ipynb
+++ b/demos/unidata_users_workshop_2015.ipynb
@@ -20,11 +20,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      ":0: FutureWarning: IPython widgets are experimental and may change in the future.\n"
+     ]
+    }
+   ],
    "source": [
     "%matplotlib inline\n",
     "import numpy as np\n",
@@ -49,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -390,7 +398,7 @@
     "                past_time_objs.append(obj)\n",
     "        # If no objects existed in the last time step, then consider objects in current time step all new\n",
     "        if len(past_time_objs) == 0:\n",
-    "            tracked_model_objects.extend(copy(model_objects[h]))\n",
+    "            tracked_model_objects.extend(model_objects[h])\n",
     "        # Match from previous time step with current time step\n",
     "        elif len(past_time_objs) > 0 and len(model_objects[h]) > 0:\n",
     "            assignments = object_matcher.match_objects(past_time_objs, model_objects[h], hour - 1, hour)\n",
